login flow functional

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.main
+.env.secrets
 
 # parcel-bundler cache (https://parceljs.org/)
 
@@ -170,3 +172,7 @@ dist
 
 .dev.vars
 .wrangler/
+
+.db-local/
+
+.local
