--- a/package.json
+++ b/package.json
@@ -1,18 +1,56 @@
 {
-	"name": "admin-server-incroft",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
-		"test": "vitest",
-		"cf-typegen": "wrangler types"
-	},
-	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.8.19",
-		"typescript": "^5.5.2",
-		"vitest": "~3.2.0",
-		"wrangler": "^4.26.1"
-	}
+  "name": "admin-server-incroft",
+  "version": "0.0.0",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "clean": "rm -rf ./dist ./node_modules",
+    "clean:dist": "rm -rf ./dist",
+    "migrate": "./migrate.sh",
+    "generate": "graphql-codegen",
+    "migration-list": "wrangler d1 migrations list DB",
+    "migration-apply-production": "wrangler d1 migrations apply DB --remote",
+    "deploy:staging": "wrangler deploy --env staging",
+    "bundle-size": "wrangler build && wrangler deploy --dry-run",
+    "deploy": "wrangler deploy",
+    "dev": "(kill -9 $(lsof -t -i:3500) 2>/dev/null || true) && wrangler dev --name admin-server-incroft --port 3500 --inspector-port 3300 --persist-to=.db-local",
+    "start": "wrangler dev",
+    "test": "vitest",
+    "cf-typegen": "wrangler types",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json,mts,d.ts}\" --no-error-on-unmatched-pattern",
+    "prepare": "husky",
+    "create-kv": "bash create_kv_namespace.sh",
+    "prod:secrets": "./wrangler-secrets.sh"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dataloader": "^2.2.3",
+    "drizzle-orm": "^0.44.4",
+    "gql": "^1.1.2",
+    "graphql": "^16.11.0",
+    "graphql-yoga": "^5.15.1",
+    "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.5"
+  },
+  "devDependencies": {
+    "@cloudflare/vitest-pool-workers": "^0.8.19",
+    "@cloudflare/workers-types": "^4.20250731.0",
+    "@graphql-codegen/cli": "^5.0.7",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-resolvers": "^4.5.1",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/bun": "^1.2.19",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.1.0",
+    "dotenv": "^17.2.1",
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2",
+    "typescript": "^5.5.2",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "~3.2.0",
+    "wrangler": "^4.26.1"
+  },
+  "peerDependencies": {
+    "typescript": "^5.5.2"
+  }
 }
