--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
 	"printWidth": 140,
-	"singleQuote": true,
-	"semi": true,
-	"useTabs": true
+	"useTabs": false,
+	"tabWidth": 2,
+	"singleQuote": false,
+	"semi": true
 }
