--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "files.associations": {
     "wrangler.json": "jsonc"
   },
-  "cSpell.words": ["incroft"]
+  "cSpell.words": ["Byfield", "incroft"]
 }
